RESOLVED FIXED250844
[Cocoa] Netflix sometimes fails to start playback
https://bugs.webkit.org/show_bug.cgi?id=250844
Summary [Cocoa] Netflix sometimes fails to start playback
Jer Noble
Reported 2023-01-19 08:45:57 PST
[Cocoa] Netflix sometimes fails to start playback
Attachments
Jer Noble
Comment 1 2023-01-19 08:46:03 PST
Jer Noble
Comment 2 2023-01-19 09:05:49 PST
EWS
Comment 3 2023-01-23 10:36:30 PST
Committed 259219@main (0773c9839a9a): <https://commits.webkit.org/259219@main> Reviewed commits have been landed. Closing PR #8835 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.